#39 Refactoring of components.
-See title.
-Also added links in current login page to reach homepage without having to manually entering the url. Click on 'Click here' at the bottom :)
-Fixed typos pointed out by @13alan (thanks again!)

--- a/client/public/HomePage.html
+++ b/client/public/HomePage.html
@@ -8,3 +8,6 @@
 <div id="test"></div>
 </body>
 </html>
+<script>
+    window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")
+</script>
